<resources>
  <string name="app_name">Screen Recorder And Server</string>
  <string name="record">Record</string>
  <string name="recording_on">Recording On</string>
  <string name="recording_off">Recording Off</string>
  <string name="client">Client</string>
  <string name="server_ip">Server IP</string>
  <string name="client_on">Client On</string>
  <string name="client_off">Client Off</string>
  <string name="start">Start/Stop Streaming</string>
  <string name="flash">Flash</string>
  <string name="camera">Camera</string>
  <string name="video">Video Settings</string>
  <string name="save">OK</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="uri">URI</string>
  <string name="password_hint">Leave empty if not needed</string>
  <string name="username_hint">Leave empty if not needed</string>
  <string name="default_bitrate">0 kbps</string>
  <string name="default_stream">rtsp://wowzaipaddress:1935/live/test.stream</string>
</resources>
